# openapi-generator-skill

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package.json  pyproject.toml
contracts/: acceptance-traceability.yaml  openapi-engineering.openapi.yaml  self-improvement-acceptance-traceability.yaml
docs/: openapi-engineering-self-improvement-requirements.md  openapi-engineering-skill-requirements.md
scripts/: aggregate_forward_evals.py  capture_contract_examples.py  check_self_improvement_traceability.py  check_traceability.py  install_skill.py  quick_validate.py  run_skill_evals.py  tdd_evidence.py  verify.py
tests/: support.py  test_ci_workflow.py  test_compare_generation.py  test_contracts.py  test_empirical_gate.py  test_environment.py  test_eval_runner.py  test_eval_scorer.py  test_evals.py  test_example_conformance.py  test_forward_aggregation.py  test_inspect_project.py  test_install_skill.py  test_launchd_installation.py  test_maintainer_evals.py  test_maintainer_skill.py  test_maintenance_analysis.py  test_maintenance_cli.py  test_maintenance_promotion.py  test_maintenance_proposal.py  test_maintenance_resource_watch.py  test_maintenance_secondary_review.py  test_npm_distribution.py  test_platform_adapters.py  test_profile_state.py  test_release_metadata.py  test_rollback.py  test_schema_authority.py  test_security_boundaries.py  test_self_improvement_e2e.py  test_self_improvement_traceability.py  test_skill_package.py  test_tdd_evidence.py  test_traceability.py  test_unattended_maintenance.py  test_usage_config.py  test_usage_contracts.py  (+12 more)
(+223 files in other folders)
