[project]
name = "openapi-engineering-skill"
version = "0.1.4"
description = "Contracts, deterministic helpers, and evaluations for the openapi-engineering skill"
requires-python = ">=3.11"
dependencies = [
  "jsonschema[format-nongpl]>=4.23,<5",
  "openapi-spec-validator>=0.7,<1",
  "PyYAML>=6,<7",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
